# private-files

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
private_files/: __init__.py  _encryption.py  private_files_manager.py  util.py  wrapper.py
tests/: test_private_files.py
